parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BACKSLASH
    BOOLEAN
    BREAK
    CASE
    CLASS
    COMMENTS
    DEFAULT
    DIVIGUAL
    DOUBLE_QUOTES
    FLOAT
    FUNCTION
    INT
    LENGTH
    LINE_BREAK
    LONGCOMMENT
    MASIGUAL
    MENOSIGUAL
    MODIGUAL
    NOT
    NULL
    OR
    PORIGUAL
    POTIGUAL
    RETURN
    SINGLE_QUOTE
    STATIC
    SWITCH
    THEN
    TOSTRING
    TYPEOF
    UNDEFINED

Grammar

Rule 0     S' -> expression
Rule 1     expression -> variable
Rule 2     expression -> variable expression
Rule 3     expression -> dataStruct
Rule 4     expression -> dataStruct expression
Rule 5     expression -> controlStruct
Rule 6     expression -> controlStruct expression
Rule 7     expression -> methodsSet
Rule 8     expression -> mapFunctions
Rule 9     expression -> arrayFn
Rule 10    expression -> declaration
Rule 11    variable -> type NAME IGUAL datatype SEMICOLON
Rule 12    variable -> type NAME IGUAL operations SEMICOLON
Rule 13    variable -> NAME IGUAL datatype SEMICOLON
Rule 14    controlStruct -> while
Rule 15    controlStruct -> for
Rule 16    controlStruct -> if
Rule 17    dataStruct -> array
Rule 18    dataStruct -> set
Rule 19    dataStruct -> map
Rule 20    while -> WHILE OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
Rule 21    while -> WHILE OPEN_PARENTHESIS bool CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
Rule 22    if -> soloIf
Rule 23    if -> soloIf elseIf
Rule 24    if -> soloIf elseIf else
Rule 25    if -> soloIf else
Rule 26    soloIf -> IF OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
Rule 27    elseIf -> ELSEIF OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
Rule 28    elseIf -> ELSEIF OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE soloIf
Rule 29    else -> ELSE OPEN_BRACE expression CLOSE_BRACE
Rule 30    controlArg -> element clause element
Rule 31    for -> FOR OPEN_PARENTHESIS inicialization SEMICOLON controlArg SEMICOLON operations CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
Rule 32    inicialization -> type NAME IGUAL NUMBER
Rule 33    inicialization -> NAME IGUAL NUMBER
Rule 34    operations -> NUMBER operand NUMBER
Rule 35    operations -> NAME SUMA SUMA
Rule 36    operations -> NAME RESTA RESTA
Rule 37    datatype -> NUMBER
Rule 38    datatype -> STRING
Rule 39    datatype -> CHAR
Rule 40    operand -> SUMA
Rule 41    operand -> RESTA
Rule 42    operand -> MULTIPLICACION
Rule 43    operand -> DIVISION
Rule 44    bool -> TRUE
Rule 45    bool -> FALSE
Rule 46    type -> CONST
Rule 47    type -> LET
Rule 48    type -> VAR
Rule 49    clause -> IGUALIGUAL
Rule 50    clause -> DIFERENTE
Rule 51    clause -> MAYORQUE
Rule 52    clause -> MAYORIGUALQUE
Rule 53    clause -> MENORQUE
Rule 54    clause -> MENORIGUALQUE
Rule 55    value -> NAME
Rule 56    value -> NUMBER
Rule 57    array -> type NAME IGUAL OPEN_BRACKET items CLOSE_BRACKET SEMICOLON
Rule 58    array -> type NAME IGUAL NEW ARRAY OPEN_PARENTHESIS items CLOSE_PARENTHESIS SEMICOLON
Rule 59    map -> iniciarMap
Rule 60    map -> escribirMap
Rule 61    map -> generarMap
Rule 62    iniciarMap -> variable IGUAL NEW MAP OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
Rule 63    escribirMap -> variable IGUAL OPEN_BRACE claveValor CLOSE_BRACE
Rule 64    claveValor -> clave COLON valor
Rule 65    claveValor -> clave COLON valor COMMA claveValor
Rule 66    clave -> datatype
Rule 67    valor -> datatype
Rule 68    valor -> dataStruct
Rule 69    generarMap -> variable IGUAL OPEN_BRACE tuplas CLOSE_BRACE
Rule 70    tuplas -> tupla
Rule 71    tuplas -> tupla COMMA tuplas
Rule 72    tupla -> OPEN_BRACKET datatype CLOSE_BRACKET
Rule 73    tupla -> OPEN_BRACKET datatype COMMA datatype CLOSE_BRACKET
Rule 74    mapFunctions -> NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
Rule 75    mapFunctions -> NAME POINT GET OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
Rule 76    mapFunctions -> NAME POINT HAS OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
Rule 77    arrayFn -> NAME POINT POP OPEN_PARENTHESIS CLOSE_PARENTHESIS
Rule 78    arrayFn -> NAME POINT PUSH OPEN_PARENTHESIS element CLOSE_PARENTHESIS
Rule 79    arrayFn -> NAME POINT UNSHIFT OPEN_PARENTHESIS element CLOSE_PARENTHESIS
Rule 80    set -> type NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
Rule 81    set -> type NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
Rule 82    set -> type NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
Rule 83    set -> NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
Rule 84    set -> NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
Rule 85    set -> NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
Rule 86    methodsSet -> NAME POINT ADD OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
Rule 87    methodsSet -> NAME POINT DELETE OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
Rule 88    methodsSet -> NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
Rule 89    items -> numeros
Rule 90    items -> cadena
Rule 91    numeros -> NUMBER
Rule 92    numeros -> NUMBER COMMA numeros
Rule 93    cadena -> STRING
Rule 94    cadena -> STRING COMMA cadena
Rule 95    element -> STRING
Rule 96    element -> NUMBER
Rule 97    element -> NAME
Rule 98    declaration -> NAME IGUAL element

Terminals, with rules where they appear

ADD                  : 86
AND                  : 
ARRAY                : 58
BACKSLASH            : 
BOOLEAN              : 
BREAK                : 
CASE                 : 
CHAR                 : 39
CLASS                : 
CLEAR                : 74 88
CLOSE_BRACE          : 20 21 26 27 28 29 31 63 69
CLOSE_BRACKET        : 57 72 73 81 84
CLOSE_PARENTHESIS    : 20 21 26 27 28 31 58 62 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
COLON                : 64 65
COMMA                : 65 71 73 92 94
COMMENTS             : 
CONST                : 46
DEFAULT              : 
DELETE               : 87
DIFERENTE            : 50
DIVIGUAL             : 
DIVISION             : 43
DOUBLE_QUOTES        : 
ELSE                 : 29
ELSEIF               : 27 28
FALSE                : 45
FLOAT                : 
FOR                  : 31
FUNCTION             : 
GET                  : 75
HAS                  : 76
IF                   : 26
IGUAL                : 11 12 13 32 33 57 58 62 63 69 80 81 82 83 84 85 98
IGUALIGUAL           : 49
INT                  : 
LENGTH               : 
LET                  : 47
LINE_BREAK           : 
LONGCOMMENT          : 
MAP                  : 62
MASIGUAL             : 
MAYORIGUALQUE        : 52
MAYORQUE             : 51
MENORIGUALQUE        : 54
MENORQUE             : 53
MENOSIGUAL           : 
MODIGUAL             : 
MULTIPLICACION       : 42
NAME                 : 11 12 13 32 33 35 36 55 57 58 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 97 98
NEW                  : 58 62 80 81 82 83 84 85
NOT                  : 
NULL                 : 
NUMBER               : 32 33 34 34 37 56 91 92 96
OPEN_BRACE           : 20 21 26 27 28 29 31 63 69
OPEN_BRACKET         : 57 72 73 81 84
OPEN_PARENTHESIS     : 20 21 26 27 28 31 58 62 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
OR                   : 
POINT                : 74 75 76 77 78 79 86 87 88
POP                  : 77
PORIGUAL             : 
POTIGUAL             : 
PUSH                 : 78
RESTA                : 36 36 41
RETURN               : 
SEMICOLON            : 11 12 13 31 31 57 58 62 74 75 76 80 81 82 83 84 85 86 87 88
SET                  : 80 81 82 83 84 85
SINGLE_QUOTE         : 
STATIC               : 
STRING               : 38 93 94 95
SUMA                 : 35 35 40
SWITCH               : 
THEN                 : 
TOSTRING             : 
TRUE                 : 44
TYPEOF               : 
UNDEFINED            : 
UNSHIFT              : 79
VAR                  : 48
WHILE                : 20 21
error                : 

Nonterminals, with rules where they appear

array                : 17
arrayFn              : 9
bool                 : 21
cadena               : 90 94
clause               : 30
clave                : 64 65 75 76
claveValor           : 63 65
controlArg           : 20 26 27 28 31
controlStruct        : 5 6
dataStruct           : 3 4 68
datatype             : 11 13 66 67 72 73 73
declaration          : 10
element              : 30 30 78 79 82 85 86 87 98
else                 : 24 25
elseIf               : 23 24
escribirMap          : 60
expression           : 2 4 6 20 21 26 27 28 29 31 0
for                  : 15
generarMap           : 61
if                   : 16
inicialization       : 31
iniciarMap           : 59
items                : 57 58 81 84
map                  : 19
mapFunctions         : 8
methodsSet           : 7
numeros              : 89 92
operand              : 34
operations           : 12 31
set                  : 18
soloIf               : 22 23 24 25 28
tupla                : 70 71
tuplas               : 69 71
type                 : 11 12 32 57 58 80 81 82
valor                : 64 65
value                : 
variable             : 1 2 62 63 69
while                : 14

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . variable
    (2) expression -> . variable expression
    (3) expression -> . dataStruct
    (4) expression -> . dataStruct expression
    (5) expression -> . controlStruct
    (6) expression -> . controlStruct expression
    (7) expression -> . methodsSet
    (8) expression -> . mapFunctions
    (9) expression -> . arrayFn
    (10) expression -> . declaration
    (11) variable -> . type NAME IGUAL datatype SEMICOLON
    (12) variable -> . type NAME IGUAL operations SEMICOLON
    (13) variable -> . NAME IGUAL datatype SEMICOLON
    (17) dataStruct -> . array
    (18) dataStruct -> . set
    (19) dataStruct -> . map
    (14) controlStruct -> . while
    (15) controlStruct -> . for
    (16) controlStruct -> . if
    (86) methodsSet -> . NAME POINT ADD OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (87) methodsSet -> . NAME POINT DELETE OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (88) methodsSet -> . NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (74) mapFunctions -> . NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (75) mapFunctions -> . NAME POINT GET OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
    (76) mapFunctions -> . NAME POINT HAS OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
    (77) arrayFn -> . NAME POINT POP OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (78) arrayFn -> . NAME POINT PUSH OPEN_PARENTHESIS element CLOSE_PARENTHESIS
    (79) arrayFn -> . NAME POINT UNSHIFT OPEN_PARENTHESIS element CLOSE_PARENTHESIS
    (98) declaration -> . NAME IGUAL element
    (46) type -> . CONST
    (47) type -> . LET
    (48) type -> . VAR
    (57) array -> . type NAME IGUAL OPEN_BRACKET items CLOSE_BRACKET SEMICOLON
    (58) array -> . type NAME IGUAL NEW ARRAY OPEN_PARENTHESIS items CLOSE_PARENTHESIS SEMICOLON
    (80) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (81) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
    (82) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (83) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (84) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
    (85) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (59) map -> . iniciarMap
    (60) map -> . escribirMap
    (61) map -> . generarMap
    (20) while -> . WHILE OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (21) while -> . WHILE OPEN_PARENTHESIS bool CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (31) for -> . FOR OPEN_PARENTHESIS inicialization SEMICOLON controlArg SEMICOLON operations CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (22) if -> . soloIf
    (23) if -> . soloIf elseIf
    (24) if -> . soloIf elseIf else
    (25) if -> . soloIf else
    (62) iniciarMap -> . variable IGUAL NEW MAP OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (63) escribirMap -> . variable IGUAL OPEN_BRACE claveValor CLOSE_BRACE
    (69) generarMap -> . variable IGUAL OPEN_BRACE tuplas CLOSE_BRACE
    (26) soloIf -> . IF OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE

    NAME            shift and go to state 10
    CONST           shift and go to state 17
    LET             shift and go to state 18
    VAR             shift and go to state 19
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 26

    expression                     shift and go to state 1
    variable                       shift and go to state 2
    dataStruct                     shift and go to state 3
    controlStruct                  shift and go to state 4
    methodsSet                     shift and go to state 5
    mapFunctions                   shift and go to state 6
    arrayFn                        shift and go to state 7
    declaration                    shift and go to state 8
    type                           shift and go to state 9
    array                          shift and go to state 11
    set                            shift and go to state 12
    map                            shift and go to state 13
    while                          shift and go to state 14
    for                            shift and go to state 15
    if                             shift and go to state 16
    iniciarMap                     shift and go to state 20
    escribirMap                    shift and go to state 21
    generarMap                     shift and go to state 22
    soloIf                         shift and go to state 25

state 1

    (0) S' -> expression .



state 2

    (1) expression -> variable .
    (2) expression -> variable . expression
    (62) iniciarMap -> variable . IGUAL NEW MAP OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (63) escribirMap -> variable . IGUAL OPEN_BRACE claveValor CLOSE_BRACE
    (69) generarMap -> variable . IGUAL OPEN_BRACE tuplas CLOSE_BRACE
    (1) expression -> . variable
    (2) expression -> . variable expression
    (3) expression -> . dataStruct
    (4) expression -> . dataStruct expression
    (5) expression -> . controlStruct
    (6) expression -> . controlStruct expression
    (7) expression -> . methodsSet
    (8) expression -> . mapFunctions
    (9) expression -> . arrayFn
    (10) expression -> . declaration
    (11) variable -> . type NAME IGUAL datatype SEMICOLON
    (12) variable -> . type NAME IGUAL operations SEMICOLON
    (13) variable -> . NAME IGUAL datatype SEMICOLON
    (17) dataStruct -> . array
    (18) dataStruct -> . set
    (19) dataStruct -> . map
    (14) controlStruct -> . while
    (15) controlStruct -> . for
    (16) controlStruct -> . if
    (86) methodsSet -> . NAME POINT ADD OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (87) methodsSet -> . NAME POINT DELETE OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (88) methodsSet -> . NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (74) mapFunctions -> . NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (75) mapFunctions -> . NAME POINT GET OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
    (76) mapFunctions -> . NAME POINT HAS OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
    (77) arrayFn -> . NAME POINT POP OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (78) arrayFn -> . NAME POINT PUSH OPEN_PARENTHESIS element CLOSE_PARENTHESIS
    (79) arrayFn -> . NAME POINT UNSHIFT OPEN_PARENTHESIS element CLOSE_PARENTHESIS
    (98) declaration -> . NAME IGUAL element
    (46) type -> . CONST
    (47) type -> . LET
    (48) type -> . VAR
    (57) array -> . type NAME IGUAL OPEN_BRACKET items CLOSE_BRACKET SEMICOLON
    (58) array -> . type NAME IGUAL NEW ARRAY OPEN_PARENTHESIS items CLOSE_PARENTHESIS SEMICOLON
    (80) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (81) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
    (82) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (83) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (84) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
    (85) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (59) map -> . iniciarMap
    (60) map -> . escribirMap
    (61) map -> . generarMap
    (20) while -> . WHILE OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (21) while -> . WHILE OPEN_PARENTHESIS bool CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (31) for -> . FOR OPEN_PARENTHESIS inicialization SEMICOLON controlArg SEMICOLON operations CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (22) if -> . soloIf
    (23) if -> . soloIf elseIf
    (24) if -> . soloIf elseIf else
    (25) if -> . soloIf else
    (62) iniciarMap -> . variable IGUAL NEW MAP OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (63) escribirMap -> . variable IGUAL OPEN_BRACE claveValor CLOSE_BRACE
    (69) generarMap -> . variable IGUAL OPEN_BRACE tuplas CLOSE_BRACE
    (26) soloIf -> . IF OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE

    $end            reduce using rule 1 (expression -> variable .)
    CLOSE_BRACE     reduce using rule 1 (expression -> variable .)
    IGUAL           shift and go to state 28
    NAME            shift and go to state 10
    CONST           shift and go to state 17
    LET             shift and go to state 18
    VAR             shift and go to state 19
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 26

    variable                       shift and go to state 2
    expression                     shift and go to state 27
    dataStruct                     shift and go to state 3
    controlStruct                  shift and go to state 4
    methodsSet                     shift and go to state 5
    mapFunctions                   shift and go to state 6
    arrayFn                        shift and go to state 7
    declaration                    shift and go to state 8
    type                           shift and go to state 9
    array                          shift and go to state 11
    set                            shift and go to state 12
    map                            shift and go to state 13
    while                          shift and go to state 14
    for                            shift and go to state 15
    if                             shift and go to state 16
    iniciarMap                     shift and go to state 20
    escribirMap                    shift and go to state 21
    generarMap                     shift and go to state 22
    soloIf                         shift and go to state 25

state 3

    (3) expression -> dataStruct .
    (4) expression -> dataStruct . expression
    (1) expression -> . variable
    (2) expression -> . variable expression
    (3) expression -> . dataStruct
    (4) expression -> . dataStruct expression
    (5) expression -> . controlStruct
    (6) expression -> . controlStruct expression
    (7) expression -> . methodsSet
    (8) expression -> . mapFunctions
    (9) expression -> . arrayFn
    (10) expression -> . declaration
    (11) variable -> . type NAME IGUAL datatype SEMICOLON
    (12) variable -> . type NAME IGUAL operations SEMICOLON
    (13) variable -> . NAME IGUAL datatype SEMICOLON
    (17) dataStruct -> . array
    (18) dataStruct -> . set
    (19) dataStruct -> . map
    (14) controlStruct -> . while
    (15) controlStruct -> . for
    (16) controlStruct -> . if
    (86) methodsSet -> . NAME POINT ADD OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (87) methodsSet -> . NAME POINT DELETE OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (88) methodsSet -> . NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (74) mapFunctions -> . NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (75) mapFunctions -> . NAME POINT GET OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
    (76) mapFunctions -> . NAME POINT HAS OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
    (77) arrayFn -> . NAME POINT POP OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (78) arrayFn -> . NAME POINT PUSH OPEN_PARENTHESIS element CLOSE_PARENTHESIS
    (79) arrayFn -> . NAME POINT UNSHIFT OPEN_PARENTHESIS element CLOSE_PARENTHESIS
    (98) declaration -> . NAME IGUAL element
    (46) type -> . CONST
    (47) type -> . LET
    (48) type -> . VAR
    (57) array -> . type NAME IGUAL OPEN_BRACKET items CLOSE_BRACKET SEMICOLON
    (58) array -> . type NAME IGUAL NEW ARRAY OPEN_PARENTHESIS items CLOSE_PARENTHESIS SEMICOLON
    (80) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (81) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
    (82) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (83) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (84) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
    (85) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (59) map -> . iniciarMap
    (60) map -> . escribirMap
    (61) map -> . generarMap
    (20) while -> . WHILE OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (21) while -> . WHILE OPEN_PARENTHESIS bool CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (31) for -> . FOR OPEN_PARENTHESIS inicialization SEMICOLON controlArg SEMICOLON operations CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (22) if -> . soloIf
    (23) if -> . soloIf elseIf
    (24) if -> . soloIf elseIf else
    (25) if -> . soloIf else
    (62) iniciarMap -> . variable IGUAL NEW MAP OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (63) escribirMap -> . variable IGUAL OPEN_BRACE claveValor CLOSE_BRACE
    (69) generarMap -> . variable IGUAL OPEN_BRACE tuplas CLOSE_BRACE
    (26) soloIf -> . IF OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE

    $end            reduce using rule 3 (expression -> dataStruct .)
    CLOSE_BRACE     reduce using rule 3 (expression -> dataStruct .)
    NAME            shift and go to state 10
    CONST           shift and go to state 17
    LET             shift and go to state 18
    VAR             shift and go to state 19
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 26

    dataStruct                     shift and go to state 3
    expression                     shift and go to state 29
    variable                       shift and go to state 2
    controlStruct                  shift and go to state 4
    methodsSet                     shift and go to state 5
    mapFunctions                   shift and go to state 6
    arrayFn                        shift and go to state 7
    declaration                    shift and go to state 8
    type                           shift and go to state 9
    array                          shift and go to state 11
    set                            shift and go to state 12
    map                            shift and go to state 13
    while                          shift and go to state 14
    for                            shift and go to state 15
    if                             shift and go to state 16
    iniciarMap                     shift and go to state 20
    escribirMap                    shift and go to state 21
    generarMap                     shift and go to state 22
    soloIf                         shift and go to state 25

state 4

    (5) expression -> controlStruct .
    (6) expression -> controlStruct . expression
    (1) expression -> . variable
    (2) expression -> . variable expression
    (3) expression -> . dataStruct
    (4) expression -> . dataStruct expression
    (5) expression -> . controlStruct
    (6) expression -> . controlStruct expression
    (7) expression -> . methodsSet
    (8) expression -> . mapFunctions
    (9) expression -> . arrayFn
    (10) expression -> . declaration
    (11) variable -> . type NAME IGUAL datatype SEMICOLON
    (12) variable -> . type NAME IGUAL operations SEMICOLON
    (13) variable -> . NAME IGUAL datatype SEMICOLON
    (17) dataStruct -> . array
    (18) dataStruct -> . set
    (19) dataStruct -> . map
    (14) controlStruct -> . while
    (15) controlStruct -> . for
    (16) controlStruct -> . if
    (86) methodsSet -> . NAME POINT ADD OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (87) methodsSet -> . NAME POINT DELETE OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (88) methodsSet -> . NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (74) mapFunctions -> . NAME POINT CLEAR OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (75) mapFunctions -> . NAME POINT GET OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
    (76) mapFunctions -> . NAME POINT HAS OPEN_PARENTHESIS clave CLOSE_PARENTHESIS SEMICOLON
    (77) arrayFn -> . NAME POINT POP OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (78) arrayFn -> . NAME POINT PUSH OPEN_PARENTHESIS element CLOSE_PARENTHESIS
    (79) arrayFn -> . NAME POINT UNSHIFT OPEN_PARENTHESIS element CLOSE_PARENTHESIS
    (98) declaration -> . NAME IGUAL element
    (46) type -> . CONST
    (47) type -> . LET
    (48) type -> . VAR
    (57) array -> . type NAME IGUAL OPEN_BRACKET items CLOSE_BRACKET SEMICOLON
    (58) array -> . type NAME IGUAL NEW ARRAY OPEN_PARENTHESIS items CLOSE_PARENTHESIS SEMICOLON
    (80) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (81) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
    (82) set -> . type NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (83) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (84) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS OPEN_BRACKET items CLOSE_BRACKET CLOSE_PARENTHESIS SEMICOLON
    (85) set -> . NAME IGUAL NEW SET OPEN_PARENTHESIS element CLOSE_PARENTHESIS SEMICOLON
    (59) map -> . iniciarMap
    (60) map -> . escribirMap
    (61) map -> . generarMap
    (20) while -> . WHILE OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (21) while -> . WHILE OPEN_PARENTHESIS bool CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (31) for -> . FOR OPEN_PARENTHESIS inicialization SEMICOLON controlArg SEMICOLON operations CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE
    (22) if -> . soloIf
    (23) if -> . soloIf elseIf
    (24) if -> . soloIf elseIf else
    (25) if -> . soloIf else
    (62) iniciarMap -> . variable IGUAL NEW MAP OPEN_PARENTHESIS CLOSE_PARENTHESIS SEMICOLON
    (63) escribirMap -> . variable IGUAL OPEN_BRACE claveValor CLOSE_BRACE
    (69) generarMap -> . variable IGUAL OPEN_BRACE tuplas CLOSE_BRACE
    (26) soloIf -> . IF OPEN_PARENTHESIS controlArg CLOSE_PARENTHESIS OPEN_BRACE expression CLOSE_BRACE

    $end            reduce using rule 5 (expression -> controlStruct .)
    CLOSE_BRACE     reduce using rule 5 (expression -> controlStruct .)
    NAME            shift and go to state 10
    CONST           shift and go to state 17
    LET             shift and go to state 18
    VAR             shift and go to state 19
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 26

    controlStruct                  shift and go to state 4
    expression                     shift and go to state 30
    variable                       shift and go to state 2
    dataStruct                     shift and go to state 3
    methodsSet                     shift and go to state 5
    mapFunctions                   shift and go to state 6
    arrayFn                        shift and go to state 7
    declaration                    shift and go to state 8
    type                           shift and go to state 9
    array                          shift and go to state 11
    set                            shift and go to state 12
    map                            shift and go to state 13
    while                          shift and go to state 14
    for                            shift and go to state 15
    if                             shift and go to state 16
    iniciarMap                     shift and go to state 20
    escribirMap                    shift and go to state 21
    generarMap                     shift and go to state 22
    soloIf                         shift and go to state 25

state 5

    (7) expression -> methodsSet .

    $end            reduce using rule 7 (expression -> methodsSet .)
    CLOSE_BRACE     reduce using rule 7 (expression -> methodsSet .)


state 6

    (8) expression -> mapFunctions .

    $end            reduce using rule 8 (expression -> mapFunctions .)
    CLOSE_BRACE     reduce using rule 8 (expression -> mapFunctions .)


state 7

    (9) expression -> arrayFn .

    $end            reduce using rule 9 (expression -> arrayFn .)
    CLOSE_BRACE     reduce using rule 9 (expression -> arrayFn .)


state 8

    (10) expression -> declaration .

    $end            reduce using rule 10 (expression -> declaration .)
    CLOSE_BRACE     reduce using rule 10 (expression -> declaration .)


state 9
